Fix menu alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,7 +17,7 @@ body {
   background: var(--background);
   background-image: var(--background-image);
   background-blend-mode: var(--background-blend-mode);
-  transition: background .5s;
+  transition: background 0.5s;
 }
 
 body[data-loading] {
@@ -209,6 +209,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 #contact {
